# krunker-hs

./: CHANGELOG.md  LICENSE  README.md  krunker-hs.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/: Krunker.hs
src/Krunker/: Api.hs  Client.hs  Types.hs
