cabal-version:      3.0
name:               krunker-hs
version:            0.1.0.0
synopsis:           Haskell client for the Krunker API
description:        Haskell client for the Krunker API
homepage:           glensargent.com
license:            BSD-3-Clause
license-file:       LICENSE
author:             Glen Sargent
maintainer:         glen@frvr.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Krunker
    other-modules:    Krunker.Client, Krunker.Types, Krunker.Api
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0, text, aeson, bytestring, http-client, http-client-tls, http-types
    hs-source-dirs:   src
    default-language: GHC2024
